@@ -3,12 +3,10 @@
 }
 
 <h2>Blogs</h2>
-@ViewBag.Blogs.Comments()
 @foreach (var blog in ViewBag.Blogs)
 {
     @Html.ActionLink(blog.Title as string, "get", new { id = blog.Id })<br />
     @blog.Summary<br />
-    @blog.Comments()
     <hr />
 }
 
