@@ -2,7 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="1.0" />
   <package id="oak-edge" version="0.5.4" />
-  <package id="oak-edge" version="1.4.6" targetFramework="net40" />
+  <package id="oak-edge" version="1.4.7" targetFramework="net40" />
   <package id="rake-dot-net" version="1.0.6" />
   <package id="specwatchr" version="1.5.2" />
   <package id="Unity" version="2.1.505.0" />
